// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`indexing indexRepo updates indexes when records change. 1`] = `
Array [
  Object {
    "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(0)@jpeg",
    "creator": "user(0)",
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "description": "freshening things up",
    "did": "user(0)",
    "displayName": "ali",
    "followersCount": 2,
    "followsCount": 2,
    "handle": "alice.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {},
    "postsCount": 5,
    "viewer": Object {},
  },
  Object {
    "cursor": "0000000000000::bafycid",
    "feed": Array [
      Object {
        "post": Object {
          "author": Object {
            "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(0)@jpeg",
            "declaration": Object {
              "actorType": "",
              "cid": "",
            },
            "did": "user(0)",
            "displayName": "ali",
            "handle": "alice.test",
            "viewer": Object {},
          },
          "cid": "cids(1)",
          "downvoteCount": 0,
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "record": Object {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "text": "fresh post!",
          },
          "replyCount": 0,
          "repostCount": 0,
          "upvoteCount": 0,
          "uri": "record(0)",
          "viewer": Object {},
        },
      },
      Object {
        "post": Object {
          "author": Object {
            "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(0)@jpeg",
            "declaration": Object {
              "actorType": "",
              "cid": "",
            },
            "did": "user(0)",
            "displayName": "ali",
            "handle": "alice.test",
            "viewer": Object {},
          },
          "cid": "cids(2)",
          "downvoteCount": 0,
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "record": Object {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "reply": Object {
              "parent": Object {
                "cid": "cids(4)",
                "uri": "record(3)",
              },
              "root": Object {
                "cid": "cids(3)",
                "uri": "record(2)",
              },
            },
            "text": "thanks bob",
          },
          "replyCount": 0,
          "repostCount": 0,
          "upvoteCount": 0,
          "uri": "record(1)",
          "viewer": Object {},
        },
        "reply": Object {
          "parent": Object {
            "author": Object {
              "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(0)@jpeg",
              "declaration": Object {
                "actorType": "",
                "cid": "",
              },
              "did": "user(2)",
              "displayName": "bobby",
              "handle": "bob.test",
              "viewer": Object {
                "followedBy": "record(5)",
                "following": "record(4)",
              },
            },
            "cid": "cids(4)",
            "downvoteCount": 0,
            "embed": Object {
              "$type": "app.bsky.embed.images#presented",
              "images": Array [
                Object {
                  "alt": "tests/image/fixtures/key-landscape-small.jpg",
                  "fullsize": "https://bsky.public.url/image/sig()/rs:fit:2000:2000:1:0/plain/user(3)/cids(5)@jpeg",
                  "thumb": "https://bsky.public.url/image/sig()/rs:fit:1000:1000:1:0/plain/user(3)/cids(5)@jpeg",
                },
              ],
            },
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "record": Object {
              "$type": "app.bsky.feed.post",
              "createdAt": "1970-01-01T00:00:00.000Z",
              "embed": Object {
                "$type": "app.bsky.embed.images",
                "images": Array [
                  Object {
                    "alt": "tests/image/fixtures/key-landscape-small.jpg",
                    "image": Object {
                      "cid": "cids(5)",
                      "mimeType": "image/jpeg",
                    },
                  },
                ],
              },
              "reply": Object {
                "parent": Object {
                  "cid": "cids(3)",
                  "uri": "record(2)",
                },
                "root": Object {
                  "cid": "cids(3)",
                  "uri": "record(2)",
                },
              },
              "text": "hear that",
            },
            "replyCount": 1,
            "repostCount": 0,
            "upvoteCount": 0,
            "uri": "record(3)",
            "viewer": Object {},
          },
          "root": Object {
            "author": Object {
              "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(0)@jpeg",
              "declaration": Object {
                "actorType": "",
                "cid": "",
              },
              "did": "user(0)",
              "displayName": "ali",
              "handle": "alice.test",
              "viewer": Object {},
            },
            "cid": "cids(3)",
            "downvoteCount": 1,
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "record": Object {
              "$type": "app.bsky.feed.post",
              "createdAt": "1970-01-01T00:00:00.000Z",
              "text": "again",
            },
            "replyCount": 2,
            "repostCount": 1,
            "upvoteCount": 2,
            "uri": "record(2)",
            "viewer": Object {},
          },
        },
      },
      Object {
        "post": Object {
          "author": Object {
            "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(0)@jpeg",
            "declaration": Object {
              "actorType": "",
              "cid": "",
            },
            "did": "user(0)",
            "displayName": "ali",
            "handle": "alice.test",
            "viewer": Object {},
          },
          "cid": "cids(6)",
          "downvoteCount": 1,
          "embed": Object {
            "$type": "app.bsky.embed.record#presented",
            "record": Object {
              "$type": "app.bsky.embed.record#presentedRecord",
              "author": Object {
                "declaration": Object {
                  "actorType": "",
                  "cid": "",
                },
                "did": "user(4)",
                "handle": "dan.test",
                "viewer": Object {
                  "following": "record(8)",
                },
              },
              "cid": "cids(7)",
              "record": Object {
                "$type": "app.bsky.feed.post",
                "createdAt": "1970-01-01T00:00:00.000Z",
                "entities": Array [
                  Object {
                    "index": Object {
                      "end": 18,
                      "start": 0,
                    },
                    "type": "mention",
                    "value": "user(0)",
                  },
                ],
                "text": "@alice.bluesky.xyz is the best",
              },
              "uri": "record(7)",
            },
          },
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "record": Object {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "embed": Object {
              "$type": "app.bsky.embed.record",
              "record": Object {
                "cid": "cids(7)",
                "uri": "record(7)",
              },
            },
            "text": "yoohoo",
          },
          "replyCount": 0,
          "repostCount": 0,
          "upvoteCount": 1,
          "uri": "record(6)",
          "viewer": Object {},
        },
      },
      Object {
        "post": Object {
          "author": Object {
            "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(0)@jpeg",
            "declaration": Object {
              "actorType": "",
              "cid": "",
            },
            "did": "user(0)",
            "displayName": "ali",
            "handle": "alice.test",
            "viewer": Object {},
          },
          "cid": "cids(3)",
          "downvoteCount": 1,
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "record": Object {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "text": "again",
          },
          "replyCount": 2,
          "repostCount": 1,
          "upvoteCount": 2,
          "uri": "record(2)",
          "viewer": Object {},
        },
      },
      Object {
        "post": Object {
          "author": Object {
            "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(0)@jpeg",
            "declaration": Object {
              "actorType": "",
              "cid": "",
            },
            "did": "user(0)",
            "displayName": "ali",
            "handle": "alice.test",
            "viewer": Object {},
          },
          "cid": "cids(8)",
          "downvoteCount": 0,
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "record": Object {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "text": "hey there",
          },
          "replyCount": 0,
          "repostCount": 0,
          "upvoteCount": 0,
          "uri": "record(9)",
          "viewer": Object {},
        },
      },
    ],
  },
  Object {
    "cursor": "0000000000000::bafycid",
    "follows": Array [
      Object {
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(4)",
        "handle": "dan.test",
        "viewer": Object {
          "following": "record(8)",
        },
      },
      Object {
        "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(0)@jpeg",
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(2)",
        "displayName": "bobby",
        "handle": "bob.test",
        "viewer": Object {
          "followedBy": "record(5)",
          "following": "record(4)",
        },
      },
    ],
    "subject": Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(0)@jpeg",
      "declaration": Object {
        "actorType": "",
        "cid": "",
      },
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "viewer": Object {},
    },
  },
]
`;

exports[`indexing indexes posts. 1`] = `
Object {
  "thread": Object {
    "$type": "app.bsky.feed.getPostThread#threadViewPost",
    "post": Object {
      "author": Object {
        "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(1)@jpeg",
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "viewer": Object {},
      },
      "cid": "cids(0)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "entities": Array [
          Object {
            "index": Object {
              "end": 9,
              "start": 0,
            },
            "type": "mention",
            "value": "user(2)",
          },
        ],
        "text": "@bob.test how are you?",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(0)",
      "viewer": Object {},
    },
    "replies": Array [],
  },
}
`;

exports[`indexing indexes posts. 2`] = `
Object {
  "thread": Object {
    "$type": "app.bsky.feed.getPostThread#threadViewPost",
    "post": Object {
      "author": Object {
        "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(1)@jpeg",
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "viewer": Object {},
      },
      "cid": "cids(0)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "entities": Array [
          Object {
            "index": Object {
              "end": 11,
              "start": 0,
            },
            "type": "mention",
            "value": "user(2)",
          },
        ],
        "text": "@carol.test how are you?",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(0)",
      "viewer": Object {},
    },
    "replies": Array [],
  },
}
`;

exports[`indexing indexes posts. 3`] = `
Object {
  "createMessages": Array [
    Object {
      "author": "user(1)",
      "reason": "mention",
      "recordCid": "cids(0)",
      "recordUri": "record(0)",
      "type": "create_notification",
      "userDid": "user(0)",
    },
  ],
  "deletedMessages": Array [
    Object {
      "recordUri": "record(0)",
      "type": "delete_notifications",
    },
  ],
  "updateMessages": Array [
    Object {
      "recordUri": "record(0)",
      "type": "delete_notifications",
    },
    Object {
      "author": "user(1)",
      "reason": "mention",
      "recordCid": "cids(1)",
      "recordUri": "record(0)",
      "type": "create_notification",
      "userDid": "user(2)",
    },
  ],
}
`;

exports[`indexing indexes profiles. 1`] = `
Object {
  "creator": "user(0)",
  "declaration": Object {
    "actorType": "",
    "cid": "",
  },
  "did": "user(0)",
  "displayName": "dan",
  "followersCount": 0,
  "followsCount": 0,
  "handle": "dan.test",
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "myState": Object {},
  "postsCount": 0,
  "viewer": Object {},
}
`;

exports[`indexing indexes profiles. 2`] = `
Object {
  "creator": "user(0)",
  "declaration": Object {
    "actorType": "",
    "cid": "",
  },
  "did": "user(0)",
  "displayName": "danny",
  "followersCount": 0,
  "followsCount": 0,
  "handle": "dan.test",
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "myState": Object {},
  "postsCount": 0,
  "viewer": Object {},
}
`;

exports[`indexing indexes profiles. 3`] = `
Object {
  "creator": "user(0)",
  "declaration": Object {
    "actorType": "",
    "cid": "",
  },
  "did": "user(0)",
  "followersCount": 0,
  "followsCount": 0,
  "handle": "dan.test",
  "myState": Object {},
  "postsCount": 0,
  "viewer": Object {},
}
`;

exports[`indexing indexes profiles. 4`] = `
Object {
  "createMessages": Array [],
  "deletedMessages": Array [],
  "updateMessages": Array [],
}
`;
